--- a/divers.ipynb
+++ b/divers.ipynb
@@ -326,6 +326,54 @@
     "t_score = np.mean(np.abs(KNN[\"prediction\"] - y_valid) <= 5)\n",
     "print(t_score)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('fc1.weight',\n",
+       "              tensor([[-0.3405,  1.6287, -2.1188,  ...,  0.2029, -0.6420,  0.2121],\n",
+       "                      [-0.2283,  2.2251, -0.7992,  ..., -0.0516, -0.0449,  0.1750],\n",
+       "                      [-0.4774,  1.1969, -1.0996,  ...,  0.1133,  0.0771, -0.0466],\n",
+       "                      ...,\n",
+       "                      [-0.6190,  0.7319, -0.8468,  ...,  0.3707,  0.2378, -0.2750],\n",
+       "                      [-0.3448,  0.4914, -1.0244,  ...,  0.0658, -0.0724,  0.2376],\n",
+       "                      [-0.6837,  0.8118, -1.2124,  ..., -0.0560,  0.0843,  0.3855]])),\n",
+       "             ('fc1.bias',\n",
+       "              tensor([-1.3937, -0.8735,  0.1341, -0.3309, -1.9959, -0.9621, -1.7877, -1.6476,\n",
+       "                       0.2729, -2.3220,  0.2205, -0.8211, -0.5560, -2.1929, -1.7008, -0.8603,\n",
+       "                      -2.2535, -1.8017, -1.3856,  0.1865, -2.2592,  0.2033, -1.9521, -1.1445,\n",
+       "                      -2.2564, -0.4305, -2.4457, -0.3733, -1.6407, -0.6116, -0.1254, -2.0119,\n",
+       "                      -0.9624, -1.4193, -2.3708,  0.0762, -2.3738, -1.1282, -2.3822, -2.2404,\n",
+       "                      -0.7922, -1.9045, -0.7874, -0.1750, -2.1635, -0.0516, -1.7090, -1.2873,\n",
+       "                      -1.9953, -1.1248])),\n",
+       "             ('fc2.weight',\n",
+       "              tensor([[-0.1528, -0.1292, -0.1043, -0.0903, -0.0154, -0.0084, -0.1429, -0.2214,\n",
+       "                       -0.2740, -0.1117, -0.2422, -0.1127, -0.0483, -0.1279, -0.1307, -0.1371,\n",
+       "                       -0.1449, -0.1479, -0.4647, -0.2774, -0.0139, -0.3071, -0.1963, -0.1463,\n",
+       "                       -0.0705, -0.0963, -0.0233, -0.1258, -0.0193, -0.1474, -0.1957, -0.0676,\n",
+       "                       -0.0451, -0.0400,  0.0105, -0.3021, -0.1834, -0.1685, -0.2464, -0.1669,\n",
+       "                       -0.1464,  0.0200, -0.0599, -0.2378, -0.2025, -0.2566, -0.1195,  0.0040,\n",
+       "                        0.0486, -0.0783]])),\n",
+       "             ('fc2.bias', tensor([-1.6620])),\n",
+       "             ('fc3.weight', tensor([[-20.7698]])),\n",
+       "             ('fc3.bias', tensor([22.5361]))])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "toto = torch.load(\"best_model.pth\", weights_only=False)\n",
+    "toto"
+   ]
   }
  ],
  "metadata": {
