--- a/nn_3.ipynb
+++ b/nn_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "from sklearn.base import BaseEstimator, RegressorMixin\n",
     "from sklearn.decomposition import PCA\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
-    "from scipy.stats import uniform, randint, loguniform\n"
+    "from scipy.stats import uniform, randint, loguniform\n",
+    "from sklearn import preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +34,7 @@
        "'\\ndata = pd.concat([data_train, data_test], axis=0)\\nX = data.iloc[:, 6:]\\nclassifiers = data.iloc[:, 1:4]\\nenc = OneHotEncoder()\\ndata_oh = enc.fit_transform(classifiers).toarray()\\ndata_oh = pd.DataFrame(data_oh)\\n\\n# Nombre de lignes dans data_train\\nn_train = len(data_train)\\n\\n# Séparer data en data_train et data_test\\ndata_train_oh = data_oh.iloc[:n_train, :].reset_index(drop=True)\\ndata_test_oh = data_oh.iloc[n_train:, :].reset_index(drop=True)\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +80,13 @@
     "X_st = standardizer.fit_transform(X_train)\n",
     "\n",
     "# Perform PCA to retain 95% of the variance\n",
-    "pca = PCA(16)\n",
+    "pca = PCA(42)\n",
     "pca.fit(X_st)\n",
     "X_pca = pca.transform(X_st)\n",
     "\n",
+    "\"\"\"\n",
+    "X_normalised = preprocessing.normalize(X_train.values)\n",
+    "\"\"\"\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X_pca, y, test_size=0.2, random_state = 42)\n",
     "\n",
     "# Convert to tensors\n",
@@ -94,13 +98,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., ..., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(X_normalised, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_st = standardizer.transform(X_test)\n",
     "X_pca = pca.transform(X_st)\n",
-    "\n",
+    "#X_test_normalised = preprocessing.normalize(X_test.values)\n",
     "X_test_tensor = torch.tensor(X_pca, dtype=torch.float32).clone().detach() "
    ]
   },
@@ -176,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +268,7 @@
     "        self.activation = activation\n",
     "        self.model = FeedForwardNN(input_size, lin_layer_sizes,\n",
     "                 outpout_size, lin_layer_dropouts, activation)\n",
-    "        self.criterion = MyLoss() \n",
+    "        self.criterion = nn.L1Loss() \n",
     "    \n",
     "    def fit(self, X, y, do_print=False):\n",
     "        optimizer = optim.Adam(self.model.parameters(), lr=self.eta)\n",
@@ -280,57 +304,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer\n",
     "\n",
-    "def my_loss_scorer(y_true, y_pred):\n",
-    "    diff = (y_pred - y_true)\n",
-    "    loss = np.maximum(0, diff - 0.05) + np.maximum(0, -diff - 0.05)\n",
-    "    return -np.mean(loss)  # Renvoie un score négatif pour s'aligner avec scikit-learn (maximize)\n",
+    "def my_scorer(y_true, y_pred):\n",
+    "    y_true = y_true.detach().numpy()\n",
+    "    return np.mean(np.abs(y_pred-y_true)*100<=5)\n",
     "\n",
-    "custom_scorer = make_scorer(my_loss_scorer, greater_is_better=False)"
+    "custom_scorer = make_scorer(my_scorer, greater_is_better=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[114, 81]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[randint.rvs(32, 128) for _ in range(randint.rvs(1, 4))]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005867127272781008"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loguniform(1e-4, 1e-1).rvs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RandomLayers:\n",
+    "    def __init__(self,min_layers, max_layers, min_nodes, max_nodes):\n",
+    "        self.min_nodes = min_nodes\n",
+    "        self.max_nodes = max_nodes\n",
+    "        self.min_layers = min_layers\n",
+    "        self.max_layers = max_layers\n",
+    "\n",
+    "    def rvs(self, random_state=None):\n",
+    "        if random_state is not None:\n",
+    "            prev = randint.random_state\n",
+    "            randint.random_state = random_state \n",
+    "\n",
+    "        res = [[randint.rvs(self.min_nodes, self.max_nodes) for _ in range(randint.rvs(self.min_layers, self.max_layers))]]\n",
+    "\n",
+    "        if random_state is not None:\n",
+    "            randint.random_state = prev\n",
+    "\n",
+    "        return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RandomDropout:\n",
+    "    def __init__(self, max_layers,min_dropout,max_dropout):\n",
+    "        self.min_dropout = min_dropout\n",
+    "        self.max_dropout = max_dropout\n",
+    "        self.max_layers = max_layers\n",
+    "\n",
+    "    def rvs(self, random_state=None):\n",
+    "        if random_state is not None:\n",
+    "            prev = uniform.random_state\n",
+    "            uniform.random_state = random_state \n",
+    "        res = [[uniform.rvs(self.min_dropout, self.max_dropout) for _ in range(self.max_layers)]]\n",
+    "\n",
+    "        if random_state is not None:\n",
+    "            uniform.random_state = prev\n",
+    "\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_37520/2418578419.py:69: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_48663/3560239249.py:69: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  X_tensor = torch.tensor(X).clone().detach().float()\n",
-      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_37520/2418578419.py:70: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_48663/3560239249.py:70: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  y_tensor = torch.tensor(y).clone().detach().float()\n",
-      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_37520/2418578419.py:90: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  X_tensor = torch.tensor(X, dtype=torch.float32)\n",
-      "/Users/amelielheritier/anaconda3/envs/MLCourse/lib/python3.10/site-packages/sklearn/model_selection/_validation.py:982: UserWarning: Scoring failed. The score on this train-test partition for these parameters will be set to nan. Details: \n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/amelielheritier/anaconda3/envs/MLCourse/lib/python3.10/site-packages/sklearn/model_selection/_validation.py\", line 971, in _score\n",
-      "    scores = scorer(estimator, X_test, y_test, **score_params)\n",
-      "  File \"/Users/amelielheritier/anaconda3/envs/MLCourse/lib/python3.10/site-packages/sklearn/metrics/_scorer.py\", line 279, in __call__\n",
-      "    return self._score(partial(_cached_call, None), estimator, X, y_true, **_kwargs)\n",
-      "  File \"/Users/amelielheritier/anaconda3/envs/MLCourse/lib/python3.10/site-packages/sklearn/metrics/_scorer.py\", line 376, in _score\n",
-      "    return self._sign * self._score_func(y_true, y_pred, **scoring_kwargs)\n",
-      "  File \"/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_37520/4235930713.py\", line 4, in my_loss_scorer\n",
-      "    diff = (y_pred - y_true)\n",
-      "TypeError: unsupported operand type(s) for -: 'numpy.ndarray' and 'Tensor'\n",
-      "\n",
-      "  warnings.warn(\n",
-      "/Users/amelielheritier/anaconda3/envs/MLCourse/lib/python3.10/site-packages/sklearn/model_selection/_search.py:1103: UserWarning: One or more of the test scores are non-finite: [nan nan nan nan nan nan nan nan nan nan]\n",
-      "  warnings.warn(\n"
+      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_48663/3560239249.py:90: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  X_tensor = torch.tensor(X, dtype=torch.float32)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best MSE: nan using {'activation': 0, 'batch': 32, 'eta': 0.006717375374452926, 'lin_layer_dropouts': [0.06669548209299414, 0.12029480998267439], 'lin_layer_sizes': [96], 'max_epochs': 71}\n"
+      "Best MSE: 0.280709 using {'activation': 3, 'batch': 43, 'eta': 0.00027675992875770975, 'lin_layer_dropouts': [[0.011286104130902253, 0.4681150470441947, 0.9547415365774082, 0.5557785348670854]], 'lin_layer_sizes': [[108]], 'max_epochs': 182}\n"
      ]
     }
    ],
@@ -342,18 +440,20 @@
     "input_size = X_train_tensor.shape[1]\n",
     "net = NeuralNetRegressor(input_size=input_size, random_state=seed)\n",
     "\n",
+    "max_layers = 4\n",
+    "\n",
     "# Définir les paramètres pour GridSearch\n",
     "params_dist = {\n",
     "    'eta': loguniform(1e-4, 1e-1),\n",
-    "    'max_epochs': randint(50, 150),\n",
-    "    'batch': randint(32, 70),\n",
-    "    'lin_layer_sizes': [[randint.rvs(32, 128) for _ in range(randint.rvs(1, 4))]],  # Taille de 1 à 4 couches, entre 32 et 128 neurones par couche\n",
-    "    'lin_layer_dropouts': [[uniform.rvs(0, 0.5) for _ in range(randint.rvs(1, 4))]],  # Dropout entre 0 et 0.5 pour chaque couche\n",
+    "    'max_epochs': randint(150, 300),\n",
+    "    'batch': randint(32, 50),\n",
+    "    'lin_layer_sizes': RandomLayers(1,max_layers,32,128),  # Taille de 1 à 4 couches, entre 32 et 128 neurones par couche\n",
+    "    'lin_layer_dropouts': RandomDropout(max_layers,0.,1.),  # Dropout entre 0 et 1. pour chaque couche\n",
     "    'activation': randint(0, 4),\n",
     "}\n",
-    "\n",
+    "# faire une classe qui genere les valeurs aleatoirement, et creer objet de la classe dans param dist pour lin lyer sizes et dropout faire un seule valeur pour toute les couches\n",
     "# Initialiser RandomizedSearchCV\n",
-    "random_search = RandomizedSearchCV(net, params_dist, refit=True, cv=5, random_state=seed, scoring= 'neg_mean_absolute_error', verbose=0)\n",
+    "random_search = RandomizedSearchCV(net, params_dist, refit=True, cv=5, random_state=seed, scoring= custom_scorer, verbose=0, n_iter= 5) \n",
     "\n",
     "# Entraîner le modèle avec GridSearch\n",
     "random_grid_result = random_search.fit(X_train_tensor, y_train_tensor)\n",
@@ -364,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -372,16 +472,16 @@
      "output_type": "stream",
      "text": [
       "y_pred contains NaN: False\n",
-      "MSE : 15.229756683835571\n",
-      "t_score test : 0.9403846153846154\n",
-      "t_score train : 0.926923076923077\n"
+      "MSE : 10.965619792370601\n",
+      "t_score test : 0.9192307692307692\n",
+      "t_score train : 0.9\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_37520/2418578419.py:90: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/93/xgf_b79s5sd1vjn_794f14ym0000gn/T/ipykernel_48663/3560239249.py:90: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  X_tensor = torch.tensor(X, dtype=torch.float32)\n"
      ]
     },
@@ -391,7 +491,7 @@
        "\"\\nids = np.arange(1, len(predictions) + 1)\\n\\n# Create a DataFrame for the output\\noutput_df = pd.DataFrame({\\n    'ID': ids,\\n    'PURITY': predictions\\n})\\n\\n# Save the DataFrame to a CSV file\\noutput_df.to_csv('predictions.csv', index=False) \\n\\n\\n# Afficher la courbe d'apprentissage\\nimport matplotlib.pyplot as plt\\nplt.plot(steps, learning_curve)\\nplt.xlabel('Steps')\\nplt.ylabel('Loss')\\nplt.title('Learning Curve')\\nplt.show()\\n\""
       ]
      },
-     "execution_count": 60,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,8 +514,8 @@
     "#print(\"Loss :\", loss)\n",
     "\n",
     "# Calculer le t_score\n",
-    "train_score = np.mean(np.abs((y_pred_train-y_train)*100<=5))\n",
-    "test_score = np.mean(np.abs((y_pred-y_valid)*100<=5))\n",
+    "train_score = np.mean(np.abs(y_pred_train-y_train)*100<=5)\n",
+    "test_score = np.mean(np.abs(y_pred-y_valid)*100<=5)\n",
     "print(\"t_score test :\", train_score)\n",
     "print(\"t_score train :\", test_score)\n",
     "\n",
