--- a/Summary_conclusions.ipynb
+++ b/Summary_conclusions.ipynb
@@ -29,9 +29,9 @@
    "source": [
     "- For the preprocessing of both linear and non linear model we removed the first 6 columns of the dataset which were text.\n",
     "\n",
-    "- We try to create new features from the pure heroin furnished in substances.csv by making a dot product between the original data and the pure heroin. It gave us nine new features that we use in the linear model.\n",
+    "- We try to create new features from the pure heroin furnished in substances.csv by making a dot product between the original data and the pure heroin. It gave us nine new features that we used in the linear model.\n",
     "\n",
-    "- For the non-linear model, we chose neural network thus we perform a standardization and a PCA to reduce the number of features used, and found out that only 16 features were necessary to explained the variance. \n",
+    "- For the non-linear model, we chose neural network thus we perform a standardization and a PCA to reduce the number of features used, and found out that only 42 features were necessary to explained the variance. \n",
     " "
    ]
   },
