--- a/Ferrer_Lhéritier.ipynb
+++ b/Ferrer_Lhéritier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[1300 rows x 131 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "[1432 rows x 126 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,11 +1714,9 @@
    "source": [
     "- For the preprocessing of both linear and non linear model we removed the first 6 columns of the dataset which were text. We chose a split with a rate of 0.2 for the validation set.\n",
     "\n",
-    "- We try to use the new features we created with the pure substances and thus perform PCA to reduce the number of features and find out that only --- were necessary to explained the variance. We also perform PCA on the original data set and only --- were necessary to explained the variance.\n",
+    "- We try to use the new features we created with the pure substances and thus perform PCA to reduce the number of features and find out that only 1 was necessary to explained the variance. We also perform PCA on the original data set and only 2 were necessary to explained the variance.\n",
     "\n",
     "- We also we perform a standardization (only for the Neural Network). Then, we tried to make an OneHot encoding but the result was not convincing since the score diminished.\n",
-    "\n",
-    "# *A COMPLETER*\n",
     " "
    ]
   },
@@ -1730,28 +1728,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pca = PCA()\n",
-    "pca.fit(data.iloc[:, 6:])\n",
-    "\n",
-    "# Calculate the cumulative explained variance\n",
-    "explained_variance = np.cumsum(pca.explained_variance_ratio_)\n",
-    "\n",
-    "n_components = np.argmax(explained_variance >= 0.95) + 1\n",
-    "print(f\"Number of principal components needed to explain 95% of the variance: {n_components}\")\n",
-    "\n",
-    "plt.plot(np.arange(1, len(explained_variance) + 1), explained_variance, marker='o')\n",
-    "plt.axhline(y=0.95, color='r', linestyle='--', label='95% Explained Variance')\n",
-    "plt.xlabel('Number of Principal Components')\n",
-    "plt.ylabel('Cumulative Explained Variance')\n",
-    "plt.title('PCA - Cumulative Explained Variance')\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "<img src=\"PCA_new_features.png\" alt=\"ONew features PCA\" width=\"400\">\n"
    ]
   },
   {
@@ -1762,28 +1742,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pca = PCA()\n",
-    "pca.fit(data.iloc[:, 6:])\n",
-    "\n",
-    "# Calculate the cumulative explained variance\n",
-    "explained_variance = np.cumsum(pca.explained_variance_ratio_)\n",
-    "\n",
-    "n_components = np.argmax(explained_variance >= 0.95) + 1\n",
-    "print(f\"Number of principal components needed to explain 95% of the variance: {n_components}\")\n",
-    "\n",
-    "plt.plot(np.arange(1, len(explained_variance) + 1), explained_variance, marker='o')\n",
-    "plt.axhline(y=0.95, color='r', linestyle='--', label='95% Explained Variance')\n",
-    "plt.xlabel('Number of Principal Components')\n",
-    "plt.ylabel('Cumulative Explained Variance')\n",
-    "plt.title('PCA - Cumulative Explained Variance')\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "<img src=\"PCA_original_features.png\" alt=\"Original features PCA\" width=\"400\">\n"
    ]
   },
   {
@@ -1846,7 +1808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We perform a RandomizedSearch to find the best hyperparameters i.e. learning rate, the max number of epochs, the size of batches, the number of hidden layers and their sizes, the dropout for each layer and the activation function (ReLU, SiLU, Tanh or LeakyReLU). We perform a gradient descent with Adam optimizer and we used a weight decay of 1e-4. We also tried SGD optimizer but finally choose to kept the former one. For the loss we try several one for example L1, Huber we try to create our loss but the score were not as good as the MSE thus we kept it to evaluate the training. We also tried to use the new features we created from the dot product but the result was not satisfactory."
+    "We perform a RandomizedSearch to find the best hyperparameters i.e. learning rate, the max number of epochs, the size of batches, the number of hidden layers and their sizes, the dropout for each layer and the activation function (ReLU, SiLU, Tanh or LeakyReLU). We perform a gradient descent with Adam optimizer and we used a weight decay of 1e-4. We also tried SGD optimizer but finally chose to kept the former one. For the loss we try several one for example L1, Huber we try to create our loss but the score was not as good as the MSE thus we kept it to evaluate the training. We also tried to use the new features we created from the dot product but the result was not satisfactory."
    ]
   },
   {
@@ -1914,7 +1876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
