--- a/Ferrer_Lhéritier.ipynb
+++ b/Ferrer_Lhéritier.ipynb
@@ -1371,18 +1371,8 @@
     }
    ],
    "source": [
-    "# Find the number of components for 95% of variance\n",
-    "pca = PCA()\n",
-    "X_pca = pca.fit_transform(X_train)\n",
-    "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
-    "plt.xlabel('number of components')\n",
-    "plt.ylabel('cumulative explained variance')\n",
-    "cumulative_variance = pca.explained_variance_ratio_.cumsum()\n",
-    "n_components_95 = (cumulative_variance >= 0.95).argmax() + 1\n",
-    "print(f\"Nombre de composantes pour 95% de variance : {n_components_95}\")\n",
-    "\n",
     "# Perform PCA \n",
-    "pca = PCA(n_components=n_components_95)\n",
+    "pca = PCA(n_components = 0.95)\n",
     "pca.fit(X_train)\n",
     "X_pca = pca.transform(X_train)\n",
     "\n",
@@ -1714,11 +1704,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this project was to find the best model to predict the purity of heroin using the data from differents samples.\n",
+    "The aim of this project was to find the best model to predict the purity of heroin using the data from 1300 samples.\n",
     "\n",
     "### Insights from exploration\n",
     "\n",
-    "The visualisation step allowed us to observe the correlation between each feature, the correlation of each feature with the purity as well as the different categories in the first columns of the data.\n",
+    "In the visualisation step, we loaded, explored and visualized the data from the training and the substances set. We plotted the correlation between each feature, the correlation of each feature with the purity, \n",
+    "\n",
+    "From these plots, we deduced that the correlation between the features was too high and therefore, it could be interesting to reduce the number of features used. On the other side, the correlation of each feature with the purity informed us that a linear model \n",
     "\n",
     "- correlation entre features: trop\n",
     "- correlation avec purete: pas assez pour lineaire\n",
