--- a/Ferrer_Lhéritier.ipynb
+++ b/Ferrer_Lhéritier.ipynb
@@ -4,33 +4,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eva Luna Ferrer and Amélie Lhéritier \n"
+    "### **Eva Luna Ferrer and Amélie Lhéritier** \n",
+    "\n",
+    "- Operating systems used: **Mac, Windows and Linux (Kaggle)**\n",
+    "\n",
+    "- The best score has been found with kaggle\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data manipulation\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Sklearn\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn import preprocessing\n",
-    "from scipy.spatial.distance import cdist\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "# Torch (for neural networks)\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "from sklearn.model_selection import GridSearchCV, cross_val_score, RandomizedSearchCV, train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.base import BaseEstimator, RegressorMixin\n",
-    "from sklearn.decomposition import PCA\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
+    "\n",
+    "# Scipy\n",
+    "from scipy.spatial.distance import cdist\n",
     "from scipy.stats import uniform, randint, loguniform\n",
+    "\n",
+    "# Data visualization\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.signal import savgol_filter"
+    "\n",
+    "# Sklearn base classes\n",
+    "from sklearn.base import BaseEstimator, RegressorMixin\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 1.26.4\n",
+      "scikit-learn version: 1.5.2\n",
+      "PyTorch version: 2.5.1+cpu\n",
+      "Pandas version: 2.2.2\n",
+      "SciPy version: 1.14.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"NumPy version:\", np.__version__)\n",
+    "print(\"scikit-learn version:\", sklearn.__version__)\n",
+    "print(\"PyTorch version:\", torch.__version__)\n",
+    "print(\"Pandas version:\", pd.__version__)\n",
+    "print(\"SciPy version:\", scipy.__version__)"
    ]
   },
   {
@@ -1791,6 +1829,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### *RMSE vs lambda*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"RMSE_lambda.png\" alt=\"RMSE vs Lambda\" width=\"400\">"
    ]
   },
@@ -1837,24 +1882,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **PLOT OF LOSS NEURAL NETWORK**"
+    "#### *Neural Network Loss*"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Code à ajouter"
+    "<img src=\"Loss_NN.png\" alt=\"Loss Neural Network\" width=\"400\">\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1885,9 +1921,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- la méthode qui a mieux marché \n",
-    "- les erreurs qu'on voulait corriger mais on a pas pu \n",
-    "- bonne journee "
+    "In the end, the neural network gave the best results. We tried different hyperparameters, including the number and size of the layers, using Randomized Search, but couldn't improve the score. So, we kept the model with a fixed architecture, where the layer sizes and number were chosen at the start. This limited our options, but with more time, we could have made further improvements. Additionally, the ridge regression model could have been further improved, but the neural network took too long to optimize."
    ]
   }
  ],
