--- a/Ferrer_Lhéritier.ipynb
+++ b/Ferrer_Lhéritier.ipynb
@@ -13,13 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data manipulation\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import sklearn\n",
+    "import scipy\n",
     "\n",
     "# Sklearn\n",
     "from sklearn.linear_model import Ridge\n",
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
