final commit bis

--- a/Ferrer_Lhéritier.ipynb
+++ b/Ferrer_Lhéritier.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "### **Eva Luna Ferrer and Amélie Lhéritier** \n",
-    "Operating systems used: **Mac, Windows and Linux (Kaggle)**\n"
+    "Operating system used for the linear model result: **Windows 11**  \n",
+    "Operating system used for the Neural Network model result:\n",
+    "**'Linux-5.15.0-1073-azure-x86_64-with-glibc2.31'**\n"
    ]
   },
   {
@@ -50,6 +52,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Libraries used for the linear model result:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -72,6 +81,23 @@
     "print(\"PyTorch version:\", torch.__version__)\n",
     "print(\"Pandas version:\", pd.__version__)\n",
     "print(\"SciPy version:\", scipy.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Libraries used for the Neural Network model result:\n",
+    "\n",
+    "NumPy version: 1.23.5\n",
+    "\n",
+    "scikit-learn version: 1.5.1\n",
+    "\n",
+    "PyTorch version: 2.4.1+cu121\n",
+    "\n",
+    "Pandas version: 1.3.5\n",
+    "\n",
+    "SciPy version: 1.10.1"
    ]
   },
   {
@@ -1241,14 +1267,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing"
+    "## Linear"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### · Linear"
+    "### · Preprocessing"
    ]
   },
   {
@@ -1301,55 +1327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### · Non-linear"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train = pd.read_csv(\"./train.csv\")\n",
-    "data_test = pd.read_csv(\"./test.csv\")\n",
-    "\n",
-    "X_train = data_train.iloc[:, 6:].values\n",
-    "X_test = data_test.iloc[:, 5:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA()\n",
-    "scaler = StandardScaler() #scale before pca\n",
-    "pca.fit(scaler.fit_transform(X_train))\n",
-    "cumvariance = np.cumsum(pca.explained_variance_ratio_)\n",
-    "\n",
-    "y = data_train.iloc[:,5:6].values/100\n",
-    "\n",
-    "seed = 43\n",
-    "\n",
-    "# Standardisation of data (before PCA)\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
-    "# Perform PCA \n",
-    "pca = PCA()\n",
-    "X_train= pca.fit_transform(X_train)\n",
-    "X_test = pca.transform(X_test)\n",
-    "\n",
-    "y_train = y"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Linear Model"
+    "### · Training and testing"
    ]
   },
   {
@@ -1669,7 +1647,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Non-linear model"
+    "## Non-Linear Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### · Preprocessing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = pd.read_csv(\"./train.csv\")\n",
+    "data_test = pd.read_csv(\"./test.csv\")\n",
+    "\n",
+    "X_train = data_train.iloc[:, 6:].values\n",
+    "X_test = data_test.iloc[:, 5:].values"
    ]
   },
   {
@@ -1678,7 +1676,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define the loss we created\n",
+    "y = data_train.iloc[:,5:6].values/100\n",
+    "\n",
+    "seed = 43\n",
+    "\n",
+    "# Standardisation of data (before PCA)\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Perform PCA \n",
+    "pca = PCA()\n",
+    "X_train= pca.fit_transform(X_train)\n",
+    "X_test = pca.transform(X_test)\n",
+    "\n",
+    "y_train = y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### · Training and testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom loss corresponding to the competition metric\n",
     "def my_loss(output, target):\n",
     "    loss = torch.maximum(torch.zeros_like(output),(output - target)-.05) + torch.maximum(torch.zeros_like(output),(target - output)-.05)\n",
     "    return torch.mean(loss)"
@@ -1752,7 +1780,7 @@
     "       \n",
     "    def fit(self, X, y, do_print=False,X_valid=None, y_valid=None ):\n",
     "        \n",
-    "        if self.n_comp is not None:\n",
+    "        if self.n_comp is not None: #keep only the n_comp first components\n",
     "            print(\"n_comp\", self.n_comp)\n",
     "            self.input_size = self.n_comp\n",
     "\n",
@@ -1766,7 +1794,7 @@
     "        self.model = FeedForwardNN(self.input_size, self.lin_layer_sizes,\n",
     "                 self.outpout_size, self.lin_layer_dropouts, self.activation)\n",
     "\n",
-    "        if self.n_comp is not None:\n",
+    "        if self.n_comp is not None: #keep only the n_comp first components\n",
     "            X = X[:,:self.n_comp]\n",
     "\n",
     "        optimizer = optim.Adam(self.model.parameters(), lr=self.eta)\n",
@@ -1822,6 +1850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generator of list of sizes for the hidden layers, same size for all layers\n",
     "class RandomLayers:\n",
     "    def __init__(self,min_layers, max_layers, min_nodes, max_nodes):\n",
     "        self.min_nodes = min_nodes\n",
@@ -1849,6 +1878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generator of list of dropout rates for the hidden layers, same rate for all layers\n",
     "class RandomDropout:\n",
     "    def __init__(self, max_layers,min_dropout,max_dropout):\n",
     "        self.min_dropout = min_dropout\n",
@@ -1874,6 +1904,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# t_score used for scoring models during RandomizedSearchCV\n",
     "def my_custom_score(ground_truth, predictions):\n",
     "    return np.mean(np.abs(predictions-ground_truth)*100<=5)\n",
     "\n",
@@ -1903,7 +1934,7 @@
     "    'eta': loguniform(1e-4, 1e-1),\n",
     "    'max_epochs': randint(10, 500),\n",
     "    'batch': randint(8, 64),\n",
-    "    'lin_layer_sizes': RandomLayers(1,max_layers,4,256),  # Taille de 1 à 4 couches, entre 4 et 256 neurones par couche\n",
+    "    'lin_layer_sizes': RandomLayers(1,max_layers,4,256),  \n",
     "    'lin_layer_dropouts': RandomDropout(max_layers,0.,.5),\n",
     "    'activation': randint(0, 4),\n",
     "    'loss': randint(0, 3),\n",
@@ -1925,15 +1956,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random_search.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#y_pred = nouveau_model.predict(X_valid)\n",
     "y_pred_train = nouveau_model.predict(X_train)\n",
     "predictions = nouveau_model.predict(X_test)*100\n",
@@ -1943,7 +1965,7 @@
     "\n",
     "\n",
     "\n",
-    "# Calculate the t_score\n",
+    "# Calculate the t_score on the training set using the best model\n",
     "train_score = np.mean(np.abs(y_pred_train-y_train)*100<=5)\n",
     "print(\"t_score train :\", train_score)\n",
     "\n",
@@ -2098,9 +2120,9 @@
    "source": [
     "We performed a Randomized Search to find the best hyperparameters i.e. the learning rate, the max number of epochs, the size of batches, the number of hidden layers and their size, the dropout for each layer, the activation function (ReLU, SiLU, Tanh or LeakyReLU), the loss (MSE, L1 and the loss we created) and the number of features used.\n",
     "\n",
-    "Since we had underfitting, we increased the number of layers a their size to complexify the model a bit\n",
+    "Since we had underfitting, we increased the number of layers and their size to complexify the model a bit\n",
     "\n",
-    "We performed a gradient descent with Adam optimizer and try to use a weight decay but it didn't increase the score thus we removed it. We also tried SGD optimizer but finally chose to kept the former one.\n",
+    "We performed a gradient descent with Adam optimizer and tried to use a weight decay but it didn't increase the score thus we removed it. We also tried SGD optimizer but finally chose to kept the former one.\n",
     "\n",
     "We also tried to use the new features we created from the dot product but the result was not satisfactory."
    ]
